# pip-boy-claude

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pipboy/: __init__.py  __main__.py  _colors.py  claude.py  cli.py  log.py  stats.py  ui.py
